fix image wrap
add flex wrap to image row and center so it looks fine when screen is smaller

--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,9 @@ body {
 
 .image-line {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 32px;
+    flex-wrap: wrap;
 }
 
 .img-line-content {
